--- a/_header.twig
+++ b/_header.twig
@@ -1,31 +1,41 @@
-<?php
-/**
- * The Header for our theme.
- *
- * Displays all of the <head> section and everything up till <div id="content">
- *
- * @package Simone
- */
-?><!DOCTYPE html>
+<!DOCTYPE html>
 <html <?php language_attributes(); ?>>
 <head>
 <meta charset="<?php bloginfo( 'charset' ); ?>">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title><?php wp_title( '|', true, 'right' ); ?></title>
 <link rel="profile" href="http://gmpg.org/xfn/11">
-<link rel="pingback" href="<?php bloginfo( 'pingback_url' ); ?>">
 
-<?php wp_head(); ?>
+{% if theme.sidebar %}
+    <link rel='stylesheet' id='my-simone-layout-style' href='{{ paths.theme }}/layouts/no-sidebar.css' type='text/css' media='all'/>        
+{% else %}
+    <link rel='stylesheet' id='my-simone-layout-style' href='{{ paths.theme }}/layouts/content-sidebar.css' type='text/css' media='all'/>        
+{% endif %}
+
+
+{# Lato http://www.google.com/fonts/specimen/Lato + PT Serif http://www.google.com/fonts/specimen/PT+Serif #}
+<link rel='stylesheet' id='' href='//fonts.googleapis.com/css?family=Lato:100,300,400,400italic,700,900,900italic|PT+Serif:400,700,400italic,700italic' type='text/css' media='all'/>        
+{# FontAwesome #}
+<link rel='stylesheet' id='simone_fontawesome' href='{{ paths.theme }}fonts/font-awesome/css/font-awesome.min.css' type='text/css' media='all'/>        
+<script type='text/javascript' src='{{ paths.theme }}js/navigation.js'></script>
+<script type='text/javascript' src='{{ paths.theme }}js/hide-search.js'></script>
+<script type='text/javascript' src='{{ paths.theme }}js/superfish.min.js'></script>
+<script type='text/javascript' src='{{ paths.theme }}js/superfish-settings.js'></script>
+<script type='text/javascript' src='{{ paths.theme }}js/masonry.min.js'></script>
+<script type='text/javascript' src='{{ paths.theme }}js/masonry-settings.js'></script>
+<script type='text/javascript' src='{{ paths.theme }}js/enquire.min.js'></script>
+<script type='text/javascript' src='{{ paths.theme }}js/skip-link-focus-fix.js'></script>
+
 </head>
 
 <body <?php body_class(); ?>>
 <div id="page" class="hfeed site">
 
 	<header id="masthead" class="site-header" role="banner">
-            <a class="skip-link screen-reader-text" href="#content"><?php _e( 'Skip to content', 'simone' ); ?></a>
+            <a class="skip-link screen-reader-text" href="#content">{{ __("Skip to content") }}</a>
                 <?php if ( get_header_image() && ('blank' == get_header_textcolor()) ) { ?>
                 <figure class="header-image">
-                    <a href="<?php echo esc_url( home_url( '/' ) ); ?>" rel="home">
+                    <a href="{{ paths.root }}" rel="home">
                             <img src="<?php header_image(); ?>" width="<?php echo get_custom_header()->width; ?>" height="<?php echo get_custom_header()->height; ?>" alt="">
                     </a>
                 </figure>
@@ -38,13 +48,13 @@
                 }
             ?>
                     <div class="title-box">
-			<h1 class="site-title"><a href="<?php echo esc_url( home_url( '/' ) ); ?>" rel="home"><?php bloginfo( 'name' ); ?></a></h1>
-			<h2 class="site-description"><?php bloginfo( 'description' ); ?></h2>
+			<h1 class="site-title"><a href="{{ paths.root }}" rel="home">{{ app.config.get('general/sitename') }}</a></h1>
+			<h2 class="site-description">{{ app.config.get('general/payoff')}}</h2>
                     </div>
 		</div>
 
 		<nav id="site-navigation" class="main-navigation clear" role="navigation">
-                    <h1 class="menu-toggle"><a href="#"><?php _e( 'Menu', 'simone' ); ?></a></h1>
+                    <h1 class="menu-toggle"><a href="#">{{ 'Menu' }}</a></h1>
 
 			<?php wp_nav_menu( array( 'theme_location' => 'primary' ) ); ?>
 
