--- a/index.twig
+++ b/index.twig
@@ -1,20 +1,9 @@
-<?php
-/**
- * The main template file.
- *
- * This is the most generic template file in a WordPress theme
- * and one of the two required files for a theme (the other being style.css).
- * It is used to display a page when nothing more specific matches a query.
- * E.g., it puts together the home page when no home.php file exists.
- * Learn more: http://codex.wordpress.org/Template_Hierarchy
- *
- * @package Simone
- */
-
-get_header(); ?>
+{% include "_header.twig" %}
 
 	<div id="primary" class="content-area">
 		<main id="main" class="site-main" role="main">
+
+		home!
 
 		<?php if ( have_posts() ) : ?>
 
@@ -42,5 +31,5 @@ get_header(); ?>
 		</main><!-- #main -->
 	</div><!-- #primary -->
 
-<?php get_sidebar(); ?>
-<?php get_footer(); ?>
+{% include "_sidebar.twig" %}
+{% include "_footer.twig" %}
