Tweaking conversion of template.

--- a/_header.twig
+++ b/_header.twig
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html <?php language_attributes(); ?>>
+<html class="no-js" lang="{{ htmllang() }}">
 <head>
-<meta charset="<?php bloginfo( 'charset' ); ?>">
+<meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title><?php wp_title( '|', true, 'right' ); ?></title>
+<title>
+  {% if record.title is defined %}{{ record.title|striptags }} | {% endif %}
+  {{ app.config.get('general/sitename') }}
+  {% if record.title is not defined and app.config.get('general/payoff') %} | {{ app.config.get('general/payoff') }}{% endif %}
+</title>
 <link rel="profile" href="http://gmpg.org/xfn/11">
 
+<link rel='stylesheet' id='simone-style-css' href='{{ paths.theme }}/style.css' type='text/css' media='all'/>
 {% if theme.sidebar %}
     <link rel='stylesheet' id='my-simone-layout-style' href='{{ paths.theme }}/layouts/no-sidebar.css' type='text/css' media='all'/>        
 {% else %}
@@ -28,11 +33,12 @@
 
 </head>
 
-<body <?php body_class(); ?>>
+<body class="home blog custom-background">
 <div id="page" class="hfeed site">
 
 	<header id="masthead" class="site-header" role="banner">
             <a class="skip-link screen-reader-text" href="#content">{{ __("Skip to content") }}</a>
+            {# 
                 <?php if ( get_header_image() && ('blank' == get_header_textcolor()) ) { ?>
                 <figure class="header-image">
                     <a href="{{ paths.root }}" rel="home">
@@ -46,7 +52,14 @@
                 } else {
                     echo '<div class="site-branding">';
                 }
-            ?>
+            ?>#}
+            <div class="site-branding header-background-image" style="background-image: url('{{ paths.theme}}/{{ theme.header_image }}')">
+            {# <figure class="header-image">
+
+                    <a href="{{ paths.root }}" rel="home">
+                            <img src="{{ paths.theme}}/{{ theme.header_image }}" width="1200" height="100" alt="">
+                    </a>
+            </figure> #} 
                     <div class="title-box">
 			<h1 class="site-title"><a href="{{ paths.root }}" rel="home">{{ app.config.get('general/sitename') }}</a></h1>
 			<h2 class="site-description">{{ app.config.get('general/payoff')}}</h2>
