--- a/index.twig
+++ b/index.twig
@@ -3,7 +3,32 @@
 	<div id="primary" class="content-area">
 		<main id="main" class="site-main" role="main">
 
-		home!
+
+			<article id="post-{{record.id}}" class="post-2826 page type-page status-publish has-post-thumbnail hentry">
+			        {# <?php 
+			    if (has_post_thumbnail()) {
+			        echo '<div class="single-post-thumbnail clear">';
+			        echo '<div class="image-shifter">';
+			        simone_the_responsive_thumbnail( get_the_ID() );
+			        echo '</div>';
+			        echo '</div>';
+			    }
+			    ?> #}
+				<header class="entry-header">
+					<h1 class="entry-title">{{ record.title }}</h1>
+				</header><!-- .entry-header -->
+
+				<div class="entry-content">
+					
+					{{ record.teaser }}
+
+					{{ record.body }}
+				</div>
+				<?php edit_post_link( __( 'Edit', 'simone' ), '<footer class="entry-footer"><span class="edit-link">', '</span></footer>' ); ?>
+			</article><!-- #post-## -->
+
+
+
 
 		<?php if ( have_posts() ) : ?>
 
