--- a/_footer.twig
+++ b/_footer.twig
@@ -1,37 +1,21 @@
-<?php
-/**
- * The template for displaying the footer.
- *
- * Contains the closing of the #content div and all content after
- *
- * @package simone
- */
-?>
 
 	</div><!-- #content -->
 
 	<footer id="colophon" class="site-footer" role="contentinfo">
             <?php get_sidebar( 'footer' ); ?>
 		<div class="site-info">
-			<?php do_action( 'simone_credits' ); ?>
-			<?php
-			printf(
-				/* translators: %s = text link: WordPress, URL: http://wordpress.org/ */
-				__( 'Proudly powered by %s', 'simone' ),
-				'<a href="http://wordpress.org/" rel="generator">' . esc_attr__( 'WordPress', 'simone' ) . '</a>'
-				); ?>
+			{% set link = '<a href="https://bolt.cm">Bolt</a>' %}
+			{{ __( 'Proudly powered by %s')|replace({'%s': link})|raw  }}
+
 			<span class="sep"> | </span>
-			<?php
-			printf(
-				/* translators: %1$s = text link: Simone, URL: http://wordpress.org/themes/simone/, %2$s = text link: mor10.com, URL: http://mor10.com/ */
-				__( 'Theme: %1$s by %2$s', 'simone' ),
-                                '<a href="http://wordpress.org/themes/simone/" rel="nofollow">' . esc_attr( 'Simone', 'simone' ) . '</a>',
-				'<a href="http://mor10.com/" rel="designer nofollow">' . esc_attr__( 'mor10.com', 'simone' ) . '</a>' ); ?>
+
+			{% set link1 = '<a href="http://mor10.com/" rel="designer">mor10.com</a>' %}
+			{% set link2 = '<a href="https://twokings.nl" rel="developer">Bob at Two Kings</a>' %}
+			{{ __( 'Originally by %1, ported by %2')|replace({'%1': link1, '%2': link2})|raw  }}
+
 		</div><!-- .site-info -->
 	</footer><!-- #colophon -->
 </div><!-- #page -->
-
-<?php wp_footer(); ?>
 
 </body>
 </html>
