--- a/_header.twig
+++ b/_header.twig
@@ -33,7 +33,7 @@
 
 </head>
 
-<body class="home blog custom-background">
+<body class="home blog custom-background {% if bodyclass is not empty %}{{ bodyclass }}{% endif %}">
 <div id="page" class="hfeed site">
 
 	<header id="masthead" class="site-header" role="banner">
