Working, working, working.

--- a/_header.twig
+++ b/_header.twig
@@ -21,7 +21,9 @@
 {# Lato http://www.google.com/fonts/specimen/Lato + PT Serif http://www.google.com/fonts/specimen/PT+Serif #}
 <link rel='stylesheet' id='' href='//fonts.googleapis.com/css?family=Lato:100,300,400,400italic,700,900,900italic|PT+Serif:400,700,400italic,700italic' type='text/css' media='all'/>        
 {# FontAwesome #}
-<link rel='stylesheet' id='simone_fontawesome' href='{{ paths.theme }}fonts/font-awesome/css/font-awesome.min.css' type='text/css' media='all'/>        
+<link rel='stylesheet' id='simone_fontawesome' href='{{ paths.theme }}fonts/font-awesome/css/font-awesome.min.css' type='text/css' media='all'/>
+
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type='text/javascript' src='{{ paths.theme }}js/navigation.js'></script>
 <script type='text/javascript' src='{{ paths.theme }}js/hide-search.js'></script>
 <script type='text/javascript' src='{{ paths.theme }}js/superfish.min.js'></script>
