--- a/_macros.twig
+++ b/_macros.twig
@@ -1,6 +1,6 @@
-{% macro responsive_thumbnail(image, title) %}
+{% macro responsive_thumbnail(image, title, class) %}
 
-<div class="single-post-thumbnail clear">
+<div class="{{ class|default('single-post-thumbnail') }} clear">
     <div class="image-shifter">
         <picture>
             <!--[if IE 9]><video style="display: none;"><![endif]-->
@@ -12,5 +12,43 @@
         </picture>
     </div>
 </div>            
+
+{% endmacro %}
+
+
+{% macro recordmeta(record) %}
+{# Entry meta. #}
+<div class="entry-meta">
+    <span class="byline">Written by
+        <span class="author vcard">
+            <strong>{{ record.user.displayname }}</strong>
+        </span>
+    </span>
+    <span class="mobile-hide"> on </span>
+    <span class="posted-on">
+        <a href="http://wordpress.cmsdemo.twokings.eu/respondent-extrema-primis-media-utrisque/" rel="bookmark">
+            <time class="entry-date published" datetime="{{ record.datepublish|date("c") }}">{{ record.datepublish|localdate("%B %e, %Y") }}</time>
+        </a>
+    </span>
+    {% if record.editlink() %}
+        <span class="edit-link"><a class="post-edit-link" href="{{ record.editlink() }}">Edit</a>
+    {% endif %}
+    </span>
+</div>
+{# /entry meta. #}
+
+{% endmacro %}
+
+{% macro recordfooter(record) %}
+
+    {% if record.body != "" %}
+    <footer class="entry-footer continue-reading">
+        <a href="{{ record.link }}" title="{{ record.title|e }}" rel="bookmark">
+            Read <span aria-hidden="true">the {{ record.contenttype.singular_name }}</span><i class="fa fa-arrow-circle-o-right"></i>
+            <span class="screen-reader-text"> {{ record.title }}</span>
+        </a>
+    </footer>
+    {% endif %}
+
 
 {% endmacro %}
