--- a/_sidebar.twig
+++ b/_sidebar.twig
@@ -15,7 +15,7 @@
 
             <ul>
                 {% for record in records %}
-                    <li><a href="{{ record.link }}">{{ record.title }}</a></li>
+                    <li><a href="{{ record.link }}">{{ record.title|default("(no title)") }}</a></li>
                 {% else %}
                     <li>{{ __('No recent %contenttype%.',{'%contenttype%': ct.singular_name }) }}</li>
                 {% endfor %}
