--- a/_header.twig
+++ b/_header.twig
@@ -1,37 +1,66 @@
 <!DOCTYPE html>
 <html class="no-js" lang="{{ htmllang() }}">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>
-  {% if record.title is defined %}{{ record.title|striptags }} | {% endif %}
-  {{ app.config.get('general/sitename') }}
-  {% if record.title is not defined and app.config.get('general/payoff') %} | {{ app.config.get('general/payoff') }}{% endif %}
-</title>
-<link rel="profile" href="http://gmpg.org/xfn/11">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>
+      {% if record.title is defined %}{{ record.title|striptags }} | {% endif %}
+      {{ app.config.get('general/sitename') }}
+      {% if record.title is not defined and app.config.get('general/payoff') %} | {{ app.config.get('general/payoff') }}{% endif %}
+    </title>
+    <link rel="profile" href="http://gmpg.org/xfn/11">
 
-<link rel='stylesheet' id='simone-style-css' href='{{ paths.theme }}/style.css' type='text/css' media='all'/>
-{% if theme.sidebar %}
-    <link rel='stylesheet' id='my-simone-layout-style' href='{{ paths.theme }}/layouts/no-sidebar.css' type='text/css' media='all'/>        
-{% else %}
-    <link rel='stylesheet' id='my-simone-layout-style' href='{{ paths.theme }}/layouts/content-sidebar.css' type='text/css' media='all'/>        
-{% endif %}
+    <link rel='stylesheet' id='simone-style-css' href='{{ paths.theme }}/style.css' type='text/css' media='all'/>
+    {% if theme.sidebar %}
+        <link rel='stylesheet' id='my-simone-layout-style' href='{{ paths.theme }}/layouts/no-sidebar.css' type='text/css' media='all'/>        
+    {% else %}
+        <link rel='stylesheet' id='my-simone-layout-style' href='{{ paths.theme }}/layouts/content-sidebar.css' type='text/css' media='all'/>        
+    {% endif %}
 
 
-{# Lato http://www.google.com/fonts/specimen/Lato + PT Serif http://www.google.com/fonts/specimen/PT+Serif #}
-<link rel='stylesheet' id='' href='//fonts.googleapis.com/css?family=Lato:100,300,400,400italic,700,900,900italic|PT+Serif:400,700,400italic,700italic' type='text/css' media='all'/>        
-{# FontAwesome #}
-<link rel='stylesheet' id='simone_fontawesome' href='{{ paths.theme }}fonts/font-awesome/css/font-awesome.min.css' type='text/css' media='all'/>
+    {# Lato http://www.google.com/fonts/specimen/Lato + PT Serif http://www.google.com/fonts/specimen/PT+Serif #}
+    <link rel='stylesheet' id='' href='//fonts.googleapis.com/css?family=Lato:100,300,400,400italic,700,900,900italic|PT+Serif:400,700,400italic,700italic' type='text/css' media='all'/>        
+    {# FontAwesome #}
+    <link rel='stylesheet' id='simone_fontawesome' href='{{ paths.theme }}fonts/font-awesome/css/font-awesome.min.css' type='text/css' media='all'/>
 
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type='text/javascript' src='{{ paths.theme }}js/navigation.js'></script>
-<script type='text/javascript' src='{{ paths.theme }}js/hide-search.js'></script>
-<script type='text/javascript' src='{{ paths.theme }}js/superfish.min.js'></script>
-<script type='text/javascript' src='{{ paths.theme }}js/superfish-settings.js'></script>
-<script type='text/javascript' src='{{ paths.theme }}js/masonry.min.js'></script>
-<script type='text/javascript' src='{{ paths.theme }}js/masonry-settings.js'></script>
-<script type='text/javascript' src='{{ paths.theme }}js/enquire.min.js'></script>
-<script type='text/javascript' src='{{ paths.theme }}js/skip-link-focus-fix.js'></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type='text/javascript' src='{{ paths.theme }}js/navigation.js'></script>
+    <script type='text/javascript' src='{{ paths.theme }}js/hide-search.js'></script>
+    <script type='text/javascript' src='{{ paths.theme }}js/superfish.min.js'></script>
+    <script type='text/javascript' src='{{ paths.theme }}js/superfish-settings.js'></script>
+    <script type='text/javascript' src='{{ paths.theme }}js/masonry.min.js'></script>
+    <script type='text/javascript' src='{{ paths.theme }}js/masonry-settings.js'></script>
+    <script type='text/javascript' src='{{ paths.theme }}js/enquire.min.js'></script>
+    <script type='text/javascript' src='{{ paths.theme }}js/skip-link-focus-fix.js'></script>
+
+    <style type="text/css">
+        .site-branding {
+            background: {{ theme.header_background }};
+        }
+
+        .category-list a:hover,
+        .entry-meta a:hover,
+        .tag-links a:hover,
+        .widget-area a:hover,
+        .nav-links a:hover,
+        .comment-meta a:hover,
+        .continue-reading a,
+        .entry-title a:hover,
+        .entry-content a,
+        .comment-content a {
+            color: {{ theme.linkcolor }};
+        }
+
+        .border-custom {
+            border: {{ theme.linkcolor }} solid 1px;
+        }
+
+        .site-title a,
+        .site-description {
+            color: {{ theme.header_textcolor }};
+        }
+    </style>    
+
 
 </head>
 
@@ -40,21 +69,7 @@
 
 	<header id="masthead" class="site-header" role="banner">
             <a class="skip-link screen-reader-text" href="#content">{{ __("Skip to content") }}</a>
-            {# 
-                <?php if ( get_header_image() && ('blank' == get_header_textcolor()) ) { ?>
-                <figure class="header-image">
-                    <a href="{{ paths.root }}" rel="home">
-                            <img src="<?php header_image(); ?>" width="<?php echo get_custom_header()->width; ?>" height="<?php echo get_custom_header()->height; ?>" alt="">
-                    </a>
-                </figure>
-                <?php } // End header image check. ?>
-            <?php
-                if ( get_header_image() && !('blank' == get_header_textcolor()) ) {
-                    echo '<div class="site-branding header-background-image" style="background-image: url(' . get_header_image() . ')">';
-                } else {
-                    echo '<div class="site-branding">';
-                }
-            ?>#}
+
             <div class="site-branding header-background-image" style="background-image: url('{{ paths.theme}}/{{ theme.header_image }}')">
 
                     <div class="title-box">
