--- a/_header.twig
+++ b/_header.twig
@@ -86,7 +86,18 @@
                             <i class="fa fa-search"></i>
                             <a href="#search-container" class="screen-reader-text">{{ __("Search") }}</a>
                         </div>
-                        <?php simone_social_menu(); ?>
+                        
+                {% if theme.social is iterable %}
+                    <div id="menu-social" class="menu-social">
+                        <ul id="menu-social-items" class="menu-items">
+                        {% for name, link in theme.social %}
+                            <li>
+                                <a href="{{link}}" title="{{name}}"><span class="screen-reader-text">{{name}}</span></a>
+                            </li>
+                        {% endfor %}
+                        </ul>
+                    </div>                        
+                {% endif %}
 
 		</nav><!-- #site-navigation -->
 
