Ah,these were needed after all. :-)

--- a/single.twig
+++ b/single.twig
@@ -10,7 +10,7 @@
             <header class="entry-header">
                 <h1 class="entry-title">{{ record.title }}</h1>
 
-                {{ macro.entrymeta(record) }}
+                {{ macro.recordmeta(record) }}
 
 
             </header><!-- .entry-header -->
