--- a/single.twig
+++ b/single.twig
@@ -6,8 +6,17 @@
 
 
         <article id="post-{{record.id}}" class="post-2 page type-page status-publish has-post-thumbnail hentry">
-            
+
+                {% if record.image is defined %}
+                    <div class="small-index-thumbnail clear">
+                        <a href="{{ record.image|image }}">
+                            <img width="980" height="450" src="{{ thumbnail(record.image, 780, 250) }}" class="attachment-index-thumb wp-post-image" alt="{{ record.image }}">
+                        </a>
+                    </div>
+                {% endif %}
+
             <header class="entry-header">
+
                 <h1 class="entry-title">{{ record.title }}</h1>
 
                 {{ macro.recordmeta(record) }}
