--- a/listing.twig
+++ b/listing.twig
@@ -9,7 +9,7 @@
 
 			    <div class="index-box has-thumbnail">
 
-                {% if record.image is defined %}
+                {% if record.image is defined and record.image is not empty %}
                     <div class="small-index-thumbnail clear">
                         <a href="{{ record.image|image }}">
                             <img width="780" height="250" src="{{ thumbnail(record.image, 780, 250) }}" class="attachment-index-thumb wp-post-image" alt="{{ record.image }}">
